--- a/views/about-us.njk
+++ b/views/about-us.njk
@@ -1,214 +1,205 @@
 {% extends "templates/base.njk" %}
 
 {% block main_body %}
-<div role="main" class="main">
+    <div role="main" class="main">
 
-    <section class="page-header">
+        <section class="page-header">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <ul class="breadcrumb">
+                            <li><a href="#">Home</a></li>
+                            <li class="active">About Us</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <h1>About Us</h1>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <div class="container">
+
             <div class="row">
                 <div class="col-md-12">
-                    <ul class="breadcrumb">
-                        <li><a href="#">Home</a></li>
-                        <li class="active">About Us</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12">
-                    <h1>About Us</h1>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <div class="container">
-
-        <div class="row">
-            <div class="col-md-12">
-                <h2 class="word-rotator-title">
-                    The New Way to <strong>
-									<span class="word-rotate" data-plugin-options="{'delay': 2000}">
+                    <h2 class="word-rotator-title">
+                        Your global local partner to help you <strong>
+									<span class="word-rotate"
+                                          data-plugin-options="{'delay': 2000}">
 										<span class="word-rotate-items">
-											<span>success.</span>
+											<span>succeed.</span>
 											<span>advance.</span>
 											<span>progress.</span>
 										</span>
 									</span>
-                </strong>
-                </h2>
+                    </strong>
+                    </h2>
+                </div>
             </div>
-        </div>
 
-        <div class="row">
-            <div class="col-md-10">
-                <p class="lead">
-                    We buy used laptops in wholesale quantities from local recyclers across the globe. These laptops
-                    are then refurbished in our <span class="alternative-font">Asia</span> operations. After the laptops
-                    pass through quality checks they
-                    are sent to various branch offices from which local retailers buy these laptops.
-                </p>
-            </div>
-            <div class="col-md-2">
-                <a href="#" class="btn btn-lg btn-primary mt-xl">Become our Partner!</a>
-            </div>
-        </div>
+            <div class="row">
+                <div class="col-md-10">
+                    <p class="lead">
+                        IT Cleanup is your one stop shop for used laptops,
+                        PC/Laptop components such as memory modules, HDD,
+                        CPU you want to sell. You'll find best
+                        possible prices with best possible value, thats our
+                        guarantee.
 
-        <div class="row">
-            <div class="col-md-12">
-                <hr class="tall">
+                    </p>
+                    <p>
+                        We buy stock lots from local retailers and sell in
+                        wholesale. We export used laptops, PC/Laptop components
+                        to geographies such as Africa, Indonesia, Malaysia,
+                        India, Singapore, China, etc. We strictly do not resell
+                        in USA.
+                    </p>
+                    <p>
+                        To truly understand the relationship and value
+                        proposition we bring to our customers, you need to
+                        experience it for yourself!
+                    </p>
+                </div>
+                <div class="col-md-2">
+                    <a href="/contact-us"
+                       class="btn btn-lg btn-primary mt-xl">Become our
+                        Partner!</a>
+                </div>
             </div>
-        </div>
 
-        <div class="row">
-            <div class="col-md-8">
-                <h3 class="heading-primary"><strong>Who</strong> We Are</h3>
-                <p>We are a team of passionate entrepreneurs who believe in improving the world with technology. During
-                    the deacde of 2010, each year approximately 150 million laptops are sold across the world. This
-                    means that every year 150 million laptops will go to landfills. While people think e-waste, we
-                    believe this is an opportunity for us to improve lives of 150 million people who cant afford new
-                    laptops. We believe that we can help mother earth by reusing these old laptops.
-                </p>
-                <p>
-                    Today the reused laptop segment is fragmented where there are multiple brochures who add cost to the
-                    reusable ewaste there by increasing cost to the end user. This harms the whole business as the new
-                    laptops can compete with old used laptops in pricing. If we can remove the unnecessary in
-                    efficiencies in the system and get more money in recyclers hands and the end customer, this could be
-                    a win-win situation. It will also ensure that this trade is not threatened by the new laptops. We
-                    think together we can make a difference.
-                </p>
+            <div class="row">
+                <div class="col-md-12">
+                    <hr class="tall">
+                </div>
             </div>
-            <div class="col-md-4">
-                <div class="featured-box featured-box-primary">
-                    <div class="box-content">
-                        <h4 class="text-uppercase">Behind the scenes</h4>
-                        <ul class="thumbnail-gallery" data-plugin-lightbox
-                            data-plugin-options="{'delegate': 'a', 'type': 'image', 'gallery': {'enabled': true}}">
-                            <li>
-                                <a title="Benefits 1" href="img/benefits/benefits-1.jpg">
-												<span class="thumbnail mb-none">
-													<img src="img/benefits/benefits-1-thumb.jpg" alt="">
-												</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a title="Benefits 2" href="img/benefits/benefits-2.jpg">
-												<span class="thumbnail mb-none">
-													<img src="img/benefits/benefits-2-thumb.jpg" alt="">
-												</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a title="Benefits 3" href="img/benefits/benefits-3.jpg">
-												<span class="thumbnail mb-none">
-													<img src="img/benefits/benefits-3-thumb.jpg" alt="">
-												</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a title="Benefits 4" href="img/benefits/benefits-4.jpg">
-												<span class="thumbnail mb-none">
-													<img src="img/benefits/benefits-4-thumb.jpg" alt="">
-												</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a title="Benefits 5" href="img/benefits/benefits-5.jpg">
-												<span class="thumbnail mb-none">
-													<img src="img/benefits/benefits-5-thumb.jpg" alt="">
-												</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a title="Benefits 6" href="img/benefits/benefits-6.jpg">
-												<span class="thumbnail mb-none">
-													<img src="img/benefits/benefits-6-thumb.jpg" alt="">
-												</span>
-                                </a>
-                            </li>
-                        </ul>
+
+            <div class="row">
+                <div class="col-md-8">
+                    <h3 class="heading-primary"><strong>Who</strong> We Are</h3>
+                    <p>We are a team of passionate entrepreneurs who believe in
+                        improving the world with technology. During
+                        the decade of 2010, every year approximately 150 million
+                        laptops were sold across the world. This
+                        means that every year 150 million laptops will go to
+                        landfills. While people think e-waste, we
+                        believe this is an opportunity for us to improve lives
+                        of 150 million people who cant afford new
+                        laptops. We believe that we can help mother earth by
+                        reusing these old laptops.
+                    </p>
+                    <p>
+                        Today the reused laptop segment is fragmented where
+                        there are multiple brochures who add cost to the
+                        reusable e-waste there by increasing cost to the end
+                        user. This harms the whole business as the new
+                        laptops can compete with old used laptops in pricing. If
+                        we can remove the unnecessary inefficiencies in the
+                        system and get more money in recyclers hands and the end
+                        customer, this could be
+                        a win-win situation. It will also ensure that this trade
+                        is not threatened by the new laptops manufacturers. We
+                        think together we can make a difference.
+                    </p>
+                </div>
+                <div class="col-md-4">
+                    <div class="featured-box featured-box-primary">
+                        <div class="box-content">
+                            <h4 class="text-uppercase">Behind the scenes</h4>
+                            <ul class="thumbnail-gallery" data-plugin-lightbox
+                                data-plugin-options="{'delegate': 'a', 'type': 'image', 'gallery': {'enabled': true}}">
+                                <li>
+                                    <a title="Vinod Gupta"
+                                       href="http://www.codervinod.com">
+                                        <span class="thumbnail mb-none">
+                                            <img src="img/benefits/profile-vinod.jpg"
+                                                 alt="">
+                                        </span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a title="Taruna Gupta"
+                                       href="http://www.codervinod.com">
+                                        <span class="thumbnail mb-none">
+                                            <img src="img/benefits/profile-taruna.jpg"
+                                                 alt="">
+                                        </span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
 
-        <div class="row">
-            <div class="col-md-12">
-                <hr class="tall">
+            <div class="row">
+                <div class="col-md-12">
+                    <hr class="tall">
+                </div>
             </div>
-        </div>
 
-        <div class="row">
-            <div class="col-md-12">
-                <h3 class="heading-primary mt-xl">Our <strong>History</strong></h3>
+            <div class="row">
+                <div class="col-md-12">
+                    <h3 class="heading-primary mt-xl">Our
+                        <strong>History</strong></h3>
+                </div>
             </div>
-        </div>
 
-        <div class="row">
-            <div class="col-md-12">
+            <div class="row">
+                <div class="col-md-12">
 
-                <ul class="history">
-                    <li class="appear-animation" data-appear-animation="fadeInUp">
-                        <div class="thumb">
-                            <img src="img/office/office-4.jpg" alt=""/>
-                        </div>
-                        <div class="featured-box">
-                            <div class="box-content">
-                                <h4 class="heading-primary"><strong>2017</strong></h4>
-                                <p>It Cleanup launched to start trading in used laptops</p>
+                    <ul class="history">
+                        <li class="appear-animation"
+                            data-appear-animation="fadeInUp">
+                            <div class="thumb">
+                                <img src="img/office/our-office-1.jpg" alt=""/>
                             </div>
-                        </div>
-                    </li>
-                    <li class="appear-animation" data-appear-animation="fadeInUp">
-                        <div class="thumb">
-                            <img src="img/office/office-4.jpg" alt=""/>
-                        </div>
-                        <div class="featured-box">
-                            <div class="box-content">
-                                <h4 class="heading-primary"><strong>2012</strong></h4>
-                                <p>CalMicro Exchange LLC opened in California to do processing of memory chips</p>
+                            <div class="featured-box">
+                                <div class="box-content">
+                                    <h4 class="heading-primary">
+                                        <strong>2017</strong></h4>
+                                    <p>It Cleanup launched to start trading in
+                                        used laptops</p>
+                                </div>
                             </div>
-                        </div>
-                    </li>
-                    <li class="appear-animation" data-appear-animation="fadeInUp">
-                        <div class="thumb">
-                            <img src="img/office/office-3.jpg" alt=""/>
-                        </div>
-                        <div class="featured-box">
-                            <div class="box-content">
-                                <h4 class="heading-primary"><strong>2010</strong></h4>
-                                <p>Operations expands to Singapore, first office opened</p>
+                        </li>
+                        <li class="appear-animation"
+                            data-appear-animation="fadeInUp">
+                            <div class="thumb">
+                                <img src="img/office/our-office-2.jpg" alt=""/>
                             </div>
-                        </div>
-                    </li>
-                    <li class="appear-animation" data-appear-animation="fadeInUp">
-                        <div class="thumb">
-                            <img src="img/office/office-2.jpg" alt=""/>
-                        </div>
-                        <div class="featured-box">
-                            <div class="box-content">
-                                <h4 class="heading-primary"><strong>2005</strong></h4>
-                                <p>Simtronics branch launched in India</p>
+                            <div class="featured-box">
+                                <div class="box-content">
+                                    <h4 class="heading-primary">
+                                        <strong>2010</strong></h4>
+                                    <p>Operations expands to Singapore, first
+                                        office opened</p>
+                                </div>
                             </div>
-                        </div>
-                    </li>
-                    <li class="appear-animation" data-appear-animation="fadeInUp">
-                        <div class="thumb">
-                            <img src="img/office/office-1.jpg" alt=""/>
-                        </div>
-                        <div class="featured-box">
-                            <div class="box-content">
-                                <h4 class="heading-primary"><strong>2000</strong></h4>
-                                <p>First shop opened in Nehru Place</p>
+                        </li>
+                        <li class="appear-animation"
+                            data-appear-animation="fadeInUp">
+                            <div class="thumb">
+                                <img src="img/office/our-office-3.jpg" alt=""/>
                             </div>
-                        </div>
-                    </li>
-                </ul>
+                            <div class="featured-box">
+                                <div class="box-content">
+                                    <h4 class="heading-primary">
+                                        <strong>2005</strong></h4>
+                                    <p>First operations started in New
+                                        Delhi, India</p>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
 
+                </div>
             </div>
+
         </div>
 
     </div>
-
-</div>
 {% endblock %}
 
