--- a/views/templates/footer.njk
+++ b/views/templates/footer.njk
@@ -52,11 +52,11 @@
             <div class="col-md-2">
                 <h4>Follow Us</h4>
                 <ul class="social-icons">
-                    <li class="social-icons-facebook"><a href="http://www.facebook.com/" target="_blank"
+                    <li class="social-icons-facebook"><a href="https://www.facebook.com/itcleanup/" target="_blank"
                                                          title="Facebook"><i class="fa fa-facebook"></i></a></li>
-                    <li class="social-icons-twitter"><a href="http://www.twitter.com/" target="_blank"
+                    <li class="social-icons-twitter"><a href="https://twitter.com/itcleanup" target="_blank"
                                                         title="Twitter"><i class="fa fa-twitter"></i></a></li>
-                    <li class="social-icons-linkedin"><a href="http://www.linkedin.com/" target="_blank"
+                    <li class="social-icons-linkedin"><a href="https://www.linkedin.com/company/itcleanup" target="_blank"
                                                          title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
                 </ul>
             </div>
