--- a/views/templates/menu.njk
+++ b/views/templates/menu.njk
@@ -46,14 +46,14 @@
                                 <i class="fa fa-bars"></i>
                             </button>
                             <ul class="header-social-icons social-icons hidden-xs">
-                                <li class="social-icons-facebook"><a href="http://www.facebook.com/" target="_blank"
+                                <li class="social-icons-facebook"><a href="https://www.facebook.com/itcleanup/" target="_blank"
                                                                      title="Facebook"><i class="fa fa-facebook"></i></a>
                                 </li>
-                                <li class="social-icons-twitter"><a href="http://www.twitter.com/" target="_blank"
+                                <li class="social-icons-twitter"><a href="https://twitter.com/itcleanup" target="_blank"
                                                                     title="Twitter"><i
                                         class="fa fa-twitter"></i></a>
                                 </li>
-                                <li class="social-icons-linkedin"><a href="http://www.linkedin.com/" target="_blank"
+                                <li class="social-icons-linkedin"><a href="https://www.linkedin.com/company/itcleanup" target="_blank"
                                                                      title="Linkedin"><i class="fa fa-linkedin"></i></a>
                                 </li>
                             </ul>
